sg.tf
#create security group for alb
resource "aws_security_group" "alb_security_group" {
  name        = "alb_sg"
  description = "Allow  port 80"
  vpc_id      = aws_vpc.vpc.id



  ingress {
    description = "http access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

#redirect http acces to https
resource "aws_lb_listener" "alb" {
  load_balancer_arn = aws_lb.alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      host        = "#{host}"
      path        = "/#{path}"
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

#create security group for webserver
resource "aws_security_group" "webserver" {
  name        = "webserver_sg"
  description = "Allow  port 443 https"
  vpc_id      = aws_vpc.vpc.id


  ingress {
    description     = "https access"
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_security_group.id]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# create a listener on port 80 with redirect action
# terraform aws create listener
